clusters/vollminlab-cluster/mediastack/bazarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: bazarr
  labels:
    app: bazarr
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - bazarr.vollminlab.com
      secretName: wildcard-tls
